--- a/CRM/views/event-entry.ejs
+++ b/CRM/views/event-entry.ejs
@@ -4,6 +4,7 @@
   <head>
     <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   </head>
 
 <body class="app sidebar-show aside-menu-show">
@@ -78,7 +79,6 @@
       <script>
         function changeAgent(value){
           var contacts = JSON.parse($('#variableJSON').text());
-          console.log(contacts.length);
           var contactOptions = "";
           contactOptions += "<option>N/A</option>";
           for (j = 0; j < contacts.length; j++) {
