--- a/CRM/views/activity-report.ejs
+++ b/CRM/views/activity-report.ejs
@@ -19,7 +19,7 @@
 
     <main class="main mt-2 ml-3">
       <h1>Activity Report</h1>
-
+      <form id="formActivityReport" name="formActivityReport" method="post" action="/resultActivityReport">
 
       <div class="card w-25">
         <div class="card-body">
@@ -28,11 +28,11 @@
         <div class="form-row">
           <div class="form-group col-6">
             <label for="inputEmail4">Date Start</label>
-            <input type="date" class="form-control" id="date-start-input" placeholder="Email"  required>
+            <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
           </div>
           <div class="form-group col-6">
             <label for="inputPassword4">Date End</label>
-            <input type="date" class="form-control" id="date-end-input" placeholder="Password"  required>
+            <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
           </div>
         </div>
 
@@ -40,7 +40,7 @@
         <div class="form-row">
           <div class="form-group col-6">
             <label for="agentSelect">Agent</label>
-            <select class="form-control" id="agent-select">
+            <select class="form-control" name="agentSelect" id="agentSelect">
               <%
                 	var list = '';
                 	for (i = 0; i < agentList.length; i++) {
@@ -55,13 +55,13 @@
 <!-- Submit Button to execute -->
         <div class="form-row">
           <div class="form-group col">
-            <button type="button" class="btn btn-primary">Submit</button>
+            <input class="btn btn-primary" type="submit" value="Submit">
+            </form>
           </div>
         </div>
 
       </div>
     </div>
-
     </main>
 
     <aside class="aside-menu-hidden">
