--- a/CRM/views/result-activity-report.ejs
+++ b/CRM/views/result-activity-report.ejs
@@ -26,8 +26,8 @@
         <div class="card-body">
 
 <h3> <strong>Activity Report</strong></h3>
-<h4><small class="text">Agent: <u>KJ</u></small></h4>
-<h4><small class="text">Date Range: <u>8/24/2019-8/25/2019</u></small></h4>
+<h4><small class="text">Agent: <u><%- agent %></u></small></h4>
+<h4><small class="text">Date Range: <u><%- dateRange %></u></small></h4>
 
   <!-- Extracted data in Table Form -->
 
@@ -39,6 +39,7 @@
         <th scope="col">DATE</th>
         <th scope="col">CLIENT</th>
         <th scope="col">CONTACT</th>
+        <!-- TODO Need to implement Contact2 -->
         <th scope="col">VISIT TYPE</th>
         <th scope="col">TIME IN</th>
         <th scope="col">TIME OUT</th>
@@ -48,70 +49,21 @@
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>8/24/2019</td>
-        <td>Diversys Spectrum Products, Inc.</td>
-        <td>Royce Sy</td>
-        <td>Courtesy Visit</td>
-        <td> <i>time in</i></td>
-        <td> <i>time out</i></td>
-        <td> <i>duration</i></td>
-        <td>Visited to ask how production has progressed, if he needed anything from our side. So far no problems, customer requirements slowing down</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>8/24/2019</td>
-        <td>Felport International Marketing</td>
-        <td>Pauline Lee</td>
-        <td>Collection</td>
-        <td> <i>time in</i></td>
-        <td> <i>time out</i></td>
-        <td> <i>duration</i></td>
-        <td>Countered and collected payment for SI 49225</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>8/24/2019</td>
-        <td>Koten Enterprises Co. Inc.</td>
-        <td>Lenny Blarb</td>
-        <td>Technical Service</td>
-        <td> <i>time in</i></td>
-        <td> <i>time out</i></td>
-        <td> <i>duration</i></td>
-        <td>Inspected reported defects from batch #19B-14, performed free oven testing to rule out under or overcuring, will report results from testing once analyzed at the office.</td>
-      </tr>
-      <tr>
-        <th scope="row">4</th>
-        <td>8/25/2019</td>
-        <td>Cherimel Philippines Inc.</td>
-        <td>John Doe</td>
-        <td>Courtesy Visit</td>
-        <td> <i>time in</i></td>
-        <td> <i>time out</i></td>
-        <td> <i>duration</i></td>
-        <td>Brought snacks for purchasing team, talked for a bit regarding future projects</td>
-      </tr>
-      <tr>
-        <th scope="row">5</th>
-        <td>8/25/2019</td>
-        <td>MD Juan</td>
-        <td>Juan Dela Cruz</td>
-        <td>Delivery</td>
-        <td> <i>time in</i></td>
-        <td> <i>time out</i></td>
-        <td> <i>duration</i></td>
-        <td>Delivered lacking 100kg promised to customer, which they need for rush production</td>
-      </tr>
-      <tr>
-        <th scope="row">6</th>
-        <td>8/25/2019</td>
-        <td>Superpower Metalwood Corporation</td>
-        <td>Jules Yao</td>
-        <td>Technical Service</td>
-        <td> <i>time in</i></td>
-        <td> <i>time out</i></td>
-        <td> <i>duration</i></td>
-        <td>Jules showed me current item they are producing, metal frame bed. They need textured black finish for this project, I suggested D9197 for this product.</td>
+        <%
+          var list = '';
+          for (i = 0; i < result.length; i++) {
+            list += '<th scope="row">' + i + '</th>';
+            list += '<td>' + result[i].eventTimeIn._d + '</td>';
+            list += '<td>' + result[i].clientName + '</td>';
+            list += '<td>' + result[i].contact1 + '</td>';
+            list += '<td>' + result[i].eventType + '</td>';
+            list += '<td>' + result[i].eventTimeIn._d + '</td>';
+            list += '<td>' + result[i].eventTimeOut._d + '</td>';
+            list += '<td>' + result[i].eventDuration + '</td>';
+            list += '<td>' + result[i].eventRemarks + '</td>';
+        }
+        %>
+        <%- list %>
       </tr>
     </tbody>
   </table>
@@ -121,10 +73,14 @@
 <!-- Back Button to return to filter page -->
         <div class="form-row">
           <div class="form-group col">
-            <button type="button" class="btn btn-primary">Back</button>
+            <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
           </div>
         </div>
-
+        <script>
+          function goBack() {
+            window.history.back();
+          }
+        </script>
       </div>
     </div>
 
