--- a/CRM/views/client-entry.ejs
+++ b/CRM/views/client-entry.ejs
@@ -33,7 +33,7 @@
           </div>
           <div class="form-group col-auto">
             <label for="agentName">Agent Assignment</label>
-            <select class="form-control" id="agentAbbrev" required>
+            <select class="form-control" id="agentAbbrev" name="agentAbbrev" required>
         		<%
               	var list = '';
               	for (i = 0; i < agentList.length; i++) {
