Fixed header call for user

--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -5,4 +5,4 @@
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
 
-<strong>Current User: </strong> <u class="text-primary"> <%= user %></u>
+<strong>Current User: </strong> <u class="text-primary"> <%- user %></u>
