--- a/CRM/views/result-client-list-report.ejs
+++ b/CRM/views/result-client-list-report.ejs
@@ -41,7 +41,7 @@
     <tbody>
       <%
           var list = '';
-          var k = 1
+          var k = 1;
           for (i = 0; i < result.length; i++) {
             list += '<tr>';
             list += '<th scope="row">' + k + '</th>';
