--- a/CRM/views/result-activity-report.ejs
+++ b/CRM/views/result-activity-report.ejs
@@ -38,8 +38,8 @@
         <th scope="col"></th>
         <th scope="col">DATE</th>
         <th scope="col">CLIENT</th>
-        <th scope="col">CONTACT</th>
-        <!-- TODO Need to implement Contact2 -->
+        <th scope="col">CONTACT 1</th>
+        <th scope="col">CONTACT 2</th>
         <th scope="col">VISIT TYPE</th>
         <th scope="col">TIME IN</th>
         <th scope="col">TIME OUT</th>
@@ -57,6 +57,7 @@
             list += '<td>' + result[i].eventTimeIn._d + '</td>';
             list += '<td>' + result[i].clientName + '</td>';
             list += '<td>' + result[i].contact1 + '</td>';
+            list += '<td>' + result[i].contact2 + '</td>';
             list += '<td>' + result[i].eventType + '</td>';
             list += '<td>' + result[i].eventTimeIn._d + '</td>';
             list += '<td>' + result[i].eventTimeOut._d + '</td>';
