--- a/CRM/views/client-history-report.ejs
+++ b/CRM/views/client-history-report.ejs
@@ -19,7 +19,7 @@
 
     <main class="main mt-2 ml-3">
       <h1>Client History Report</h1>
-
+      <form id="formActivityReport" name="formActivityReport" method="post" action="/result-client-history-report">
 
       <div class="card w-25">
         <div class="card-body">
@@ -28,7 +28,7 @@
             <div class="form-row">
               <div class="form-group col-12">
                   <label for="agentSelect">Client</label>
-                    <select class="form-control" id="client-select">
+                    <select class="form-control" name="clientSelect" id="clientSelect">
                       <%
                           var list = '';
                           for (i = 0; i < clientList.length; i++) {
@@ -45,19 +45,20 @@
   <!-- Select Date Range for Data -->
         <div class="form-row">
           <div class="form-group col-6">
-            <label for="inputEmail4">Date Start</label>
-            <input type="date" class="form-control" id="date-start-input" placeholder="Email" required>
+            <label for="inputdateStart">Date Start</label>
+            <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
           </div>
           <div class="form-group col-6">
-            <label for="inputPassword4">Date End</label>
-            <input type="date" class="form-control" id="date-end-input" placeholder="Password" required>
+            <label for="inputdateEnd">Date End</label>
+            <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
           </div>
         </div>
 
 <!-- Submit Button to execute -->
         <div class="form-row">
           <div class="form-group col">
-            <button type="button" class="btn btn-primary">Submit</button>
+            <input class="btn btn-primary" type="submit" value="Submit">
+            </form>
           </div>
         </div>
 
