--- a/CRM/views/contact-history-report.ejs
+++ b/CRM/views/contact-history-report.ejs
@@ -20,7 +20,7 @@
 
     <main class="main mt-2 ml-3">
       <h1>Contact History Report</h1>
-
+      <form id="formContactHistoryReport" name="formContactHistoryReport" method="post" action="/result-contact-history-report">
 
       <div class="card w-25">
         <div class="card-body">
@@ -28,7 +28,7 @@
           <div class="form-row">
             <div class="form-group col">
               <label for="clientID">Client</label>
-              <select class="form-control" name="clientID" onChange="changeAgent(this.value);">
+              <select class="form-control" name="clientSelect" id="clientSelect" onChange="changeAgent(this.value);">
               <%
                   var list = '';
                   for (i = 0; i < locals.clients.length; i++) {
@@ -59,7 +59,7 @@
             <div class="form-row">
               <div class="form-group col-6">
                   <label for="agentContact">Contact</label>
-                    <select class="form-control" name="contactID1" id="contactID1">
+                    <select class="form-control" name="contactID" id="contactID">
                       <option value="" disabled selected>Select</option>   
                     </select>
               </div>
@@ -71,18 +71,19 @@
         <div class="form-row">
           <div class="form-group col-6">
             <label for="inputDateStart">Date Start</label>
-            <input type="date" class="form-control" id="date-start-input">
+            <input type="date" class="form-control" name="dateStartInput" id="dateStartInput">
           </div>
           <div class="form-group col-6">
             <label for="inputDateEnd">Date End</label>
-            <input type="date" class="form-control" id="date-end-input">
+            <input type="date" class="form-control" name="dateEndInput" id="dateEndInput">
           </div>
         </div>
 
 <!-- Submit Button to execute -->
         <div class="form-row">
           <div class="form-group col">
-            <button type="button" class="btn btn-primary">Submit</button>
+            <input class="btn btn-primary" type="submit" value="Submit">
+            </form>
           </div>
         </div>
 
