Fixed the eventTimeOut bug, various improvements to header/navbar etc

--- a/CRM/views/result-activity-report.ejs
+++ b/CRM/views/result-activity-report.ejs
@@ -22,7 +22,7 @@
 
     <main class="main mt-2 ml-3">
 
-      <div class="card w-75">
+      <div class="card w-100">
         <div class="card-body">
 
 <h3> <strong>Activity Report</strong></h3>
@@ -55,6 +55,7 @@
             list += '<tr>';
             list += '<th scope="row">' + k + '</th>';
             var str = result[i].eventTimeIn._d.toString();
+            var str2 = result[i].eventTimeOut._d.toString();
             var eventDate = str.substr(0, 15);
             list += '<td>' + eventDate + '</td>';
             list += '<td>' + result[i].clientName + '</td>';
@@ -65,9 +66,9 @@
             var eventTimeIn = str.substr(16, timeInString.length);
             list += '<td>' + eventTimeIn + '</td>';
             var timeOutString = result[i].eventTimeOut._d.toString();
-            var eventTimeOut = str.substr(16, timeOutString.length);
+            var eventTimeOut = str2.substr(16, timeOutString.length);
             list += '<td>' + eventTimeOut + '</td>';
-            var hours = Math.floor(result[i].eventDuration / 60);          
+            var hours = Math.floor(result[i].eventDuration / 60);
             var minutes = result[i].eventDuration % 60;
             list += '<td>' + hours + ' hours ' + minutes + ' minutes' + '</td>';
             list += '<td>' + result[i].eventRemarks + '</td>';
