--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -6,12 +6,10 @@
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
 
-<body class="app sidebar-show aside-menu-show">
+<body class="app header-fixed footer-fixed sidebar-show sidebar-nav">
 
   <header class="app-header navbar">
-
-<% include partials/header %>
-
+    <% include partials/header %>
   </header>
 
   <div class="app-body">
