Renamed .ejs and .js files to be more uniform

--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
+    <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
 
@@ -31,6 +31,12 @@
   <footer class="app-footer">
     <% include partials/footer %>
   </footer>
+
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="node_modules/@coreui/coreui/dist/js/coreui.min.js"></script>
+
 </body>
 
 </html>
