--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -3,6 +3,8 @@
 <title>CHANSEY CRM</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
-<link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
+
+<link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
+<link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
 
 <strong>Current User: </strong> <u class="text-primary"> <%- user %></u>
