--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -1,5 +1,5 @@
-<link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
-<link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
+<link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css'>
+<link rel='stylesheet' href='https://unpkg.com/@coreui/icons/css/coreui-icons.min.css'>
 
 
   <nav class="sidebar-nav">
@@ -11,46 +11,27 @@
           <i class="nav-icon cui-home"></i>HOME</a>
       </li>
 
-
-            <li class="nav-item nav-dropdown">
-              <a class="nav-link nav-dropdown-toggle" href="#">
-                Nav dropdown
-              </a>
-              <ul class="nav-dropdown-items">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <i class="nav-icon cui-puzzle"></i> Nav dropdown item
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <i class="nav-icon cui-puzzle"></i> Nav dropdown item
-                  </a>
-                </li>
-              </ul>
-            </li>
-
 <!-- Data Entry Links -->
 
       <li class="nav-title">DATA ENTRY</li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/client-entry">
+        <a class="nav-link" href="/entry-client">
           <i class="nav-icon cui-briefcase "></i> Client Data Entry
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact-entry">
+        <a class="nav-link" href="/entry-contact">
           <i class="nav-icon cui-user"></i> Contact Data Entry
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/event-entry">
+        <a class="nav-link" href="/entry-event">
           <i class="nav-icon cui-calendar"></i> Event Data Entry
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/agent-entry">
+        <a class="nav-link" href="/entry-agent">
           <i class="nav-icon cui-laptop"></i> Agent Data Entry
         </a>
       </li>
@@ -60,17 +41,17 @@
       <li class="nav-title">QUICK VIEW/EDIT</li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/view-client-search">
+        <a class="nav-link" href="/search-client">
           <i class="nav-icon cui-briefcase "></i> Clients
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/view-contact-search">
+        <a class="nav-link" href="/search-contact">
           <i class="nav-icon cui-user"></i> Contacts
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/view-event-search">
+        <a class="nav-link" href="/search-event">
           <i class="nav-icon cui-calendar"></i> Events
         </a>
       </li>
@@ -79,28 +60,28 @@
       <li class="nav-title">REPORTS</li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/activity-report">
+        <a class="nav-link" href="/report-activity">
           <i class="nav-icon cui-map"></i> Activity Report
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/visit-count-report">
+        <a class="nav-link" href="/report-visit-count">
           <i class="nav-icon cui-calculator"></i> Visit Count Report
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/client-list-report">
+        <a class="nav-link" href="/report-client-list">
           <i class="nav-icon cui-list"></i> Client List Report
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact-history-report">
+        <a class="nav-link" href="/report-contact-history">
           <i class="nav-icon cui-people"></i> Contact History
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/client-history-report">
+        <a class="nav-link" href="/report-client-history">
           <i class="nav-icon cui-calendar"></i> Client History
         </a>
       </li>
