--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css' />
+    <link rel='stylesheet' href='https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css'>
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
 
@@ -115,12 +115,10 @@
       </div>
 
       <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-
       </form>
 
     </div>
   </div>
-
     </main>
 
     <aside class="aside-menu-hidden">
