--- a/CRM/views/report-client-list.ejs
+++ b/CRM/views/report-client-list.ejs
@@ -18,10 +18,9 @@
     </div>
 
     <main class="main mt-2 ml-3">
-      <h1>Customer List Report</h1>
       <form id="formClientList" name="formClientList" method="post" action="/result-client-list-report">
-
-        <div class="card w-25">
+        <div class="card w-50">
+          <h3 class="card-header">Client List Report</h3>
           <div class="card-body">
 
       <!-- Select Agent from Prepopulated list of options -->
