--- a/CRM/views/report-visit-count.ejs
+++ b/CRM/views/report-visit-count.ejs
@@ -18,10 +18,9 @@
     </div>
 
         <main class="main mt-2 ml-3">
-          <h1>Visit Count Report</h1>
-
-            <div class="card w-25">
-            <div class="card-body">
+            <div class="card w-50">
+              <h3 class="card-header">Visit Count Report</h3>
+              <div class="card-body">
     <!-- Select Date Range for Data -->
             <div class="form-row">
               <div class="form-group col-6">
