--- a/CRM/views/result-activity-report.ejs
+++ b/CRM/views/result-activity-report.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
 
-<body class="app sidebar-show aside-menu-show">
+<body class="app header-fixed sidebar-show sidebar-fixed">
 
   <header class="app-header navbar">
 
@@ -20,7 +20,7 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main">
 
       <div class="card w-100">
         <div class="card-body">
