--- a/CRM/views/search-contact.ejs
+++ b/CRM/views/search-contact.ejs
@@ -18,9 +18,8 @@
     </div>
 
     <main class="main mt-2 ml-3">
-      <h1>View/Edit Contacts</h1>
-
-        <div class="card w-25">
+        <div class="card w-50">
+          <h3 class="card-header">View/Edit Contact</h3>
           <div class="card-body">
 
             <!-- Select Contact from Prepopulated list of options -->
