--- a/CRM/views/entry-agent.ejs
+++ b/CRM/views/entry-agent.ejs
@@ -19,21 +19,9 @@
     </div>
 
     <main class="main mt-2 ml-3">
-      <h1> AGENT ENTRY FORM </h1>
       <form id="formAddAgent" name="addAgent" method="post" action="/addAgent">
-
-      <!--
-      [TODO]
-      We need to implement the following fields: - Are we not going to keep any contact info?
-      (/) Agent Abbreviation  (text)
-      (/) Agent Name          (text)            - Are we only doing 1 field for name?
-      (/) Agent Position      (text)
-          Created By                             - Have to see if this is critical. Will we ask them to authenticate themselves first?
-      (/) Create Date         (DateTime)
-          lastModified        (DateTime)         - How do we end up modifying this? We currently don't have any means to modify items
-          Agent Active      (Boolean)          - How do we end up changing this ever? Do we need a modify field?
-      -->
-      <div class="card w-25">
+      <div class="card  w-75">
+        <h3 class="card-header">Agent Information</h3>
         <div class="card-body">
 
       <!-- Agent Abbreviation-->
