--- a/CRM/views/entry-contact.ejs
+++ b/CRM/views/entry-contact.ejs
@@ -19,30 +19,9 @@
     </div>
 
     <main class="main mt-2 ml-3">
-      <h1> CONTACT ENTRY FORM </h1>
       <form id="formAddContact" name="addContact" method="post" action="/addContact">
-
-      <!--
-      [TODO]
-      We need to implement the following fields
-      (/) Client              (lookup-Client)
-      (/) Contact Name        (text)            - Are we only doing 1 field for name?
-      (/) Contact Position    (text)
-      (/) Contact Phone       (text)
-      (/) Contact Mobile      (text)
-      (/) Contact Email       (email)
-      (/) Contact Notes       (text)
-          Created By                             - Have to see if this is critical. Will we ask them to authenticate themselves first?
-      (/) Create Date         (DateTime)
-          lastModified        (DateTime)         - How do we end up modifying this? We currently don't have any means to modify items
-          Contact Active      (Boolean)          - How do we end up changing this ever? Do we need a modify field?
-      -->
-
-
-      <!-- Client Visited-->
-      <!-- I don't know if I should be referring to the clientID when what I actually want to show up is the clientName -->
-
-      <div class="card w-25">
+      <div class="card  w-75">
+        <h3 class="card-header">Contact Information</h3>
         <div class="card-body">
 
       <div class="form-group">
