--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/coreui-icons.min.css">
   </head>
 
-<body class="app header-fixed footer-fixed sidebar-show sidebar-nav">
+<body class="app header-fixed footer sidebar-show sidebar-fixed sidebar-nav">
 
   <header class="app-header navbar">
     <% include partials/header %>
@@ -18,7 +18,7 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main">
       <h1> WELCOME TO THE CRM HOME PAGE </h1>
       <h3 class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.</h3>
     </main>
