--- a/CRM/views/report-activity.ejs
+++ b/CRM/views/report-activity.ejs
@@ -18,10 +18,9 @@
     </div>
 
     <main class="main mt-2 ml-3">
-      <h1>Activity Report</h1>
       <form id="formActivityReport" name="formActivityReport" method="post" action="/resultActivityReport">
-
-      <div class="card w-25">
+      <div class="card w-50">
+        <h3 class="card-header">Activity Report</h3>
         <div class="card-body">
 
   <!-- Select Date Range for Data -->
@@ -54,7 +53,7 @@
 
 <!-- Submit Button to execute -->
         <div class="form-row">
-          <div class="form-group col">
+          <div class="form-group">
             <input class="btn btn-primary" type="submit" value="Submit">
             </form>
           </div>
