--- a/CRM/views/result-client-history-report.ejs
+++ b/CRM/views/result-client-history-report.ejs
@@ -20,7 +20,7 @@
       <% include partials/sidebar %>
     </div>
 
-    <main class="main mt-2 ml-3">
+    <main class="main">
 
       <div class="card w-75">
         <div class="card-body">
