--- a/CRM/views/result-contact-history-report.ejs
+++ b/CRM/views/result-contact-history-report.ejs
@@ -33,7 +33,7 @@
   <!-- Extracted data in Table Form -->
 
 <div class="table-responsive">
-  <table class="table">
+  <table class="table table-bordered">
     <thead class="thead-dark">
       <tr>
         <th scope="col"></th>
