--- a/CRM/views/view-event.ejs
+++ b/CRM/views/view-event.ejs
@@ -20,10 +20,14 @@
     </div>
 
     <main class="main mt-2 ml-3">
+      <h1> EVENT ENTRY FORM </h1>
       <form id="formAddEvent" name="addEvent" method="post" action="/addEvent">
-        <div class="card  w-75">
-          <h3 class="card-header">Event Information</h3>
+
+
+        <div class="card w-25">
           <div class="card-body">
+      <!-- Event Date-->
+      <!-- [TODO] I don't know if I should be referring to the agentID when what I actually want to show up is the agentAbbrev -->
       <div class="form-row">
           <div class="form-group col">
             <label for="clientName">Date</label>
