--- a/CRM/views/visit-count-report.ejs
+++ b/CRM/views/visit-count-report.ejs
@@ -19,18 +19,18 @@
 
         <main class="main mt-2 ml-3">
           <h1>Visit Count Report</h1>
-
+            <form id="formVisitCountReport" name="formVisitCountReport" method="post" action="/result-visit-count-report">
             <div class="card w-25">
             <div class="card-body">
     <!-- Select Date Range for Data -->
             <div class="form-row">
               <div class="form-group col-6">
                 <label for="inputEmail4">Date Start</label>
-                <input type="date" class="form-control" id="date-start-input" placeholder="Email"  required>
+                <input type="date" class="form-control" id="dateStartInput" name="dateStartInput" required>
               </div>
               <div class="form-group col-6">
                 <label for="inputPassword4">Date End</label>
-                <input type="date" class="form-control" id="date-end-input" placeholder="Password"  required>
+                <input type="date" class="form-control" id="dateEndInput" name="dateEndInput" required>
               </div>
             </div>
 
@@ -38,7 +38,7 @@
             <div class="form-row">
               <div class="form-group col-6">
                 <label for="agentSelect">Agent</label>
-                <select class="form-control" id="agent-select">
+                <select class="form-control" id="agentSelect" name="agentSelect">
                   <%
                       var list = '';
                       for (i = 0; i < agentList.length; i++) {
@@ -53,7 +53,8 @@
     <!-- Submit Button to execute -->
             <div class="form-row">
               <div class="form-group col">
-                <button type="button" class="btn btn-primary">Submit</button>
+                <input class="btn btn-primary" type="submit" value="Submit">
+                </form>
               </div>
             </div>
 
