Added client addresses 2-4 in Client Entry Page, now posting to database properly

--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -64,12 +64,16 @@
         <label for="clientPhone">Client Addresses</label>
           <div class="form-row">
       			<div class="col-auto">
-      			  <textarea class="form-control" id="clientAddress" name="clientAddress" placeholder="Company Address" rows="1" required></textarea>
-              <br>
-              <textarea class="form-control" id="clientAddress1" name="clientAddress1" placeholder="Delivery Address" rows="1"></textarea>
+      			  <textarea class="form-control" id="clientAddress1" name="clientAddress1" placeholder="Company Address 1" rows="3" required></textarea>
+            </div>
+            <div class="col-auto">
+              <textarea class="form-control" id="clientAddress2" name="clientAddress2" placeholder="Company Address 2 (if applicable)" rows="3"></textarea>
       			</div>
       			<div class="col-auto">
-      			  <textarea class="form-control" id="clientDelivAddress" name="clientDelivAddress" placeholder="Delivery Address" rows="1"></textarea>
+      			  <textarea class="form-control" id="clientAddress3" name="clientAddress3" placeholder="Company Address 3 (if applicable)" rows="3"></textarea>
+      			</div>
+            <div class="col-auto">
+      			  <textarea class="form-control" id="clientAddress4" name="clientAddress4" placeholder="Company Address 4 (if applicable)" rows="3"></textarea>
       			</div>
       	</div>
       </div>
