--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -65,15 +65,34 @@
           <div class="form-row">
       			<div class="col-auto">
       			  <textarea class="form-control" id="clientAddress1" name="clientAddress1" placeholder="Company Address 1" rows="3" required></textarea>
+              <select class="form-control" id="clientAddress1Type" name="clientAddress1Type" required>
+                <option>Contact Address</option>
+                <option>Delivery Address</option>
+              </select>
             </div>
             <div class="col-auto">
               <textarea class="form-control" id="clientAddress2" name="clientAddress2" placeholder="Company Address 2 (if applicable)" rows="3"></textarea>
+                <select class="form-control" id="clientAddress2Type" name="clientAddress2Type" required>
+                  <option></option>
+                  <option>Contact Address</option>
+                  <option>Delivery Address</option>
+              </select>
       			</div>
       			<div class="col-auto">
       			  <textarea class="form-control" id="clientAddress3" name="clientAddress3" placeholder="Company Address 3 (if applicable)" rows="3"></textarea>
+                <select class="form-control" id="clientAddress3Type" name="clientAddress3Type" required>
+                  <option></option>
+                  <option>Contact Address</option>
+                  <option>Delivery Address</option>
+              </select>
       			</div>
             <div class="col-auto">
       			  <textarea class="form-control" id="clientAddress4" name="clientAddress4" placeholder="Company Address 4 (if applicable)" rows="3"></textarea>
+                <select class="form-control" id="clientAddress4Type" name="clientAddress4Type" required>
+                  <option></option>
+                  <option>Contact Address</option>
+                  <option>Delivery Address</option>
+              </select>
       			</div>
       	</div>
       </div>
